modified for aws lambda setup

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,11 @@
 [DEFAULT]
-FP_PRODUCER = 96
-FP_SERIAL = STMTE770910
-FP_IP = 192.168.1.69
-FP_PORT = 9100
+FP_PRODUCER=96
+FP_SERIAL=96MK3002460
+FP_IP=192.168.1.238
+FP_PORT=9100
+RECEIPT_VALUE_1=112
+RECEIPT_VALUE_2=134
+LOTTERY_CODE=UF7KDL1T
+TECH_CF=MDDSFN98D02M102A
+TECH_VAT=11512940963
+FP_PROTOCOL=tcp
